--- a/retardGameOne/retardGameOne/retardGameOne.vcxproj.filters
+++ b/retardGameOne/retardGameOne/retardGameOne.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="World.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="retardGameOne.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="World.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
